--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body
-    class="bg-gray-300 sm:bg-yellow-300 md:bg-green-300 lg:bg-pink-300 xl:bg-blue-300 2xl:bg-red-300"
-  >
+  <body class="bg-gray-300">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
